# Minning

./: Dockerfile
beta/: Dockerfile_alpine  Dockerfile_ubuntu  arch.sh  ubuntu.sh
beta/rust/: Cargo.toml
beta/rust/src/: main.rs  run.rs
stable/: alpine.sh
stable/rust/: Cargo.toml
stable/rust/src/: init.rs  main.rs  run.rs
stable/rust/src/modules/: config.rs  cpu.txt  init.rs  pools.txt  run.rs
